# GeographyLearner

./: .gitignore  .gitmodules  CMakeLists.txt  GeographyLearner.pro  GeographyLearner.qrc  GeographyLearner.rc  MainWidget.cpp  MainWidget.h  MapWidget.cpp  MapWidget.h  README.md  main.cpp
Data/: Attributions.md  configData.json  configDataV1_failed.json  configData_corrupt.json
Installer/GeographyLearnerInstallerMacOS.app/Contents/: Info.plist
Source/: MainWidget.cpp  MainWidget.h  MapWidget.cpp  MapWidget.h  main.cpp
libs/libgit2/win64/lib/: git2.lib
libs/libgit2/win64/lib/pkgconfig/: libgit2.pc
src/: CMakeLists.txt  ProjectSelectorWidget.cpp  ProjectSelectorWidget.h  main.cpp
src/app/: CMakeLists.txt  LearnerWidget.cpp  LearnerWidget.h  MainWidget.cpp  MainWidget.h  MapWidget.h  main.cpp
src/editor/: AcquireCredentialsWidget.cpp  AcquireCredentialsWidget.h  CMakeLists.txt  Editor Nutzertest.txt  EditorWidget.cpp  EditorWidget.h  ProjectEditWidget.cpp  ProjectEditWidget.h
src/utils/: CMakeLists.txt  GitActions.cpp  GitActions.h  MapWidget.cpp  MapWidget.h  jsonDataInterpreter.cpp  jsonDataInterpreter.h  jsonFormatUtils.cpp  jsonFormatUtils.h
